# 3d-game-shaders-for-beginners

./: .gitignore
demonstration/: CMakeLists.txt  build-for-windows.ps1
demonstration/src/: main.cxx
